fixing content alignment

--- a/homepageStyle.css
+++ b/homepageStyle.css
@@ -214,30 +214,12 @@ li a:hover {
   text-align: justify;
   left: 260px;
   right: 0px;
-  top: auto;
   bottom: auto;
-}
 
-.parg p {
   position: absolute;
-  width: 1100px;
+  width: 70%;
   height: 547px;
   top: 900px;
-
-  font-family: "poppins";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
-
-  color: #000000;
-}
-
-.parg2 p {
-  position: absolute;
-  width: 1236px;
-  height: 647px;
-  top: 1480px;
 
   font-family: "poppins";
   font-style: normal;
@@ -251,7 +233,7 @@ li a:hover {
 .footer {
   position: absolute;
   width: 100%;
-  height: 237px;
+  height: auto;
   top: 1697px;
   left: 0;
 
